2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
	* lib/ephy-dnd.c: (ephy_dnd_drag_data_get):

	More gcc4 fixes.

2005-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-lockdown.c: (update_location_editable):
	* src/ephy-shell.c: (ephy_shell_new_tab_full):
	* src/ephy-tab.c: (ephy_tab_set_property), (ephy_tab_set_address),
	(ephy_tab_open_uri_cb), (ephy_tab_address_cb), (ensure_page_info),
	(ephy_tab_net_state_cb), (ephy_tab_init), (ephy_tab_get_address),
	(ephy_tab_get_typed_address), (ephy_tab_set_typed_address):
	* src/ephy-tab.h:
	* src/ephy-toolbar.c: (sync_user_input_cb):
	* src/epiphany.defs:

	Open new tabs with blank url bar if we're loading the homepage.
	Fixes bug #313012.

2005-08-10  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp (OnStateChange):

	Gecko send several STATE_STOP, but only the final one (completed)
	is of interest (STATE_STOP&STATE_IS_NETWORK).
	Fix crash with gecko 1.8 when downloading.

	* embed/mozilla/mozilla-embed.cpp:

	Fix compilation warning.

2005-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Warn if nsIPassword.h isn't found.

2005-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix configure checks for focus workaround.

2005-08-10  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-tab.c (ephy_tab_class_init): 

	Make a few properties to be writable (where there is appropriate code
	in the ephy_tab_set_property() function), and fix the 'icon' property
	to have the correct enum value.

2005-08-09  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:
	
	Fix a small grammar error in one of the download
	dialog string, with approval of i18n
	
2005-08-09  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_set_property):
	* src/ephy-tab.h:
	* src/epiphany.defs:

	Make tab icon address setter public.
