@@ -1,4 +1,12 @@
 2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
+	
+	* embed/mozilla/MozDownload.cpp:
+
+	Work around mozilla bug
+	https://bugzilla.mozilla.org/show_bug.cgi?id=304353 .
+	Fixes bug #313215.
+
+2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
 	* lib/ephy-dnd.c: (ephy_dnd_drag_data_get):
